--- a/index.html
+++ b/index.html
@@ -149,12 +149,12 @@
       <div class="row">
         <div class="col-12 col-md-6 col-lg-4 col-xl-3">
           <a href="#" class="course">
-            <img src="../images/course1.jpg" width="100%" class="course-item" />
+            <img src="images/course1.jpg" width="100%" class="course-item" />
             <div class="info">
               <h4>개성있는 일러스트 작품 만들기</h4>
             </div>
             <div class="lecturer">
-              <img src="../images/user.png" width="20px" height="20px" /><span
+              <img src="images/user.png" width="20px" height="20px" /><span
                 class="name"
                 >문종모</span
               >
@@ -163,12 +163,12 @@
         </div>
         <div class="col-12 col-md-6 col-lg-4 col-xl-3">
           <a href="#" class="course">
-            <img src="../images/course2.jpg" width="100%" class="course-item" />
+            <img src="images/course2.jpg" width="100%" class="course-item" />
             <div class="info">
               <h4>내가 만드는 나만의 악세서리</h4>
             </div>
             <div class="lecturer">
-              <img src="../images/user.png" width="20px" height="20px" /><span
+              <img src="images/user.png" width="20px" height="20px" /><span
                 class="name"
                 >하지은</span
               >
@@ -177,12 +177,12 @@
         </div>
         <div class="col-12 col-md-6 col-lg-4 col-xl-3">
           <a href="#" class="course">
-            <img src="../images/course3.jpg" width="100%" class="course-item" />
+            <img src="images/course3.jpg" width="100%" class="course-item" />
             <div class="info">
               <h4>내 이야기를 노래로!</h4>
             </div>
             <div class="lecturer">
-              <img src="../images/user.png" width="20px" height="20px" /><span
+              <img src="images/user.png" width="20px" height="20px" /><span
                 class="name"
                 >김신의</span
               >
@@ -191,12 +191,12 @@
         </div>
         <div class="col-12 col-md-6 col-lg-4 col-xl-3">
           <a href="#" class="course">
-            <img src="../images/course4.jpg" width="100%" class="course-item" />
+            <img src="images/course4.jpg" width="100%" class="course-item" />
             <div class="info">
               <h4>비전공자를 위한 웹프로그래밍</h4>
             </div>
             <div class="lecturer">
-              <img src="../images/user.png" width="20px" height="20px" /><span
+              <img src="images/user.png" width="20px" height="20px" /><span
                 class="name"
                 >손동욱</span
               >
@@ -205,12 +205,12 @@
         </div>
         <div class="col-12 col-md-6 col-lg-4 col-xl-3">
           <a href="#" class="course">
-            <img src="../images/course5.jpg" width="100%" class="course-item" />
+            <img src="images/course5.jpg" width="100%" class="course-item" />
             <div class="info">
               <h4>자신감 업! 메이크업 클래스</h4>
             </div>
             <div class="lecturer">
-              <img src="../images/user.png" width="20px" height="20px" /><span
+              <img src="images/user.png" width="20px" height="20px" /><span
                 class="name"
                 >강귀영</span
               >
@@ -219,12 +219,12 @@
         </div>
         <div class="col-12 col-md-6 col-lg-4 col-xl-3">
           <a href="#" class="course">
-            <img src="../images/course6.jpg" width="100%" class="course-item" />
+            <img src="images/course6.jpg" width="100%" class="course-item" />
             <div class="info">
               <h4>아이돌 댄스 정복하기</h4>
             </div>
             <div class="lecturer">
-              <img src="../images/user.png" width="20px" height="20px" /><span
+              <img src="images/user.png" width="20px" height="20px" /><span
                 class="name"
                 >박윤석</span
               >
@@ -233,12 +233,12 @@
         </div>
         <div class="col-12 col-md-6 col-lg-4 col-xl-3">
           <a href="#" class="course">
-            <img src="../images/course7.jpg" width="100%" class="course-item" />
+            <img src="images/course7.jpg" width="100%" class="course-item" />
             <div class="info">
               <h4>사진 작가에게 배우는 야외 사진</h4>
             </div>
             <div class="lecturer">
-              <img src="../images/user.png" width="20px" height="20px" /><span
+              <img src="images/user.png" width="20px" height="20px" /><span
                 class="name"
                 >이윤수</span
               >
@@ -247,12 +247,12 @@
         </div>
         <div class="col-12 col-md-6 col-lg-4 col-xl-3">
           <a href="#" class="course">
-            <img src="../images/course8.jpg" width="100%" class="course-item" />
+            <img src="images/course8.jpg" width="100%" class="course-item" />
             <div class="info">
               <h4>기본부터 익히는 플라워 클래스</h4>
             </div>
             <div class="lecturer">
-              <img src="../images/user.png" width="20px" height="20px" /><span
+              <img src="images/user.png" width="20px" height="20px" /><span
                 class="name"
                 >서혜린</span
               >
